[package]
name = "points-within-polygons-wasm"
version = "0.1.0"
authors = ["Alex G Rice <rice.guido@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
points-within-polygons = { path = ".."}

geo = "0.12"
geo-types = "0.4"
geojson = { version = "0.16", features=["geo-types"] }
js-sys = "0.3"
serde = { version="1.0", features=["derive"] }
serde_derive = "1.0"
wasm-bindgen = {version= "0.2",  features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
